--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 contourpy==1.2.0
 cycler==0.12.1
 fonttools==4.45.1
+joblib==1.3.2
 kiwisolver==1.4.5
 matplotlib==3.8.2
 numpy==1.26.2
@@ -9,4 +10,7 @@ packaging==23.2
 Pillow==10.1.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
+scikit-learn==1.3.2
+scipy==1.11.4
 six==1.16.0
+threadpoolctl==3.2.0
